# 2022-is-experiments2-team-3

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: refactoring.md
aurl/: __init__.py  cli.py  setup.py
aurl/environment/: __init__.py  config.py  environment.py
aurl/environment/controller/: __init__.py  apply_kill.py  apply_move.py  calc_reward_on_meeting.py  calc_reward_on_reported.py  calc_reward_on_terminated.py  calc_reward_on_working.py  convert_action.py  define_spaces.py  initialize_observe_space.py  initialize_players.py  initialize_tasks.py  judge.py  render_state_with_rgb_array.py  reset_failed_to_move.py  share_dead.py  share_sus.py  someone_reported.py  state_to_observation.py  tally_the_votes.py  update_cooltimes.py  update_report_availability.py  update_sus.py  update_task_progress.py
aurl/environment/model/: model.py
docker/dev/: Dockerfile  environment  setup.sh
docker/exp/: docker-compose.yaml  setup.sh
docker/test/: Dockerfile  setup.sh
mock-mc/: README.md
scripts/: measure_win_rate.py
src/aurl/: __init__.py  __main__.py  cli.py
src/aurl/agent/: __init__.py  agent.py  vecenv.py
src/aurl/environment/: config.py  environment.py
src/aurl/multi_agent_ppo/: __init__.py  mult_agent_ppo.py
tests/environment/controller/: test_apply_kill.py  test_apply_move.py  test_convert_action.py  test_initialize_players.py  test_initialize_tasks.py  test_judge.py  test_reset_failed_to_move.py  test_share_dead.py  test_share_sus.py  test_someone_reported.py  (+6 more)
(+21 files in other folders)
