[project]
name = "aurl"
version = "0.1.2"
dependencies = [
  "gym==0.26.2",
  "numpy~=1.21.6"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["aurl"]

[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"