[project]
name = "aurl"
version = "0.1.2"
dependencies = [
  "gym==0.21.0",
  "numpy~=1.21.6",
  "stable_baselines3==1.6.2",
  "tqdm"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["aurl"]

[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"