[project]
name = "aurl"
version = "0.2.1"
dependencies = [
  "gym==0.21.0",
  "stable_baselines3==1.6.2",
  "tensorboard"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["aurl"]

[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"